# chatbot_generator

./: .gitignore  README.md  main.py  pyproject.toml  run.sh
adapters/: bs4_scanner.py  faiss_store.py  groq_llm.py  sentence_embedder.py
adapters/inbound/: streamlit_adapter.py
adapters/outbound/: bs4_scanner.py  faiss_store.py  groq_llm.py  ollama_embedder.py
api/: app.py
application/services/: chat_service.py  ingest_service.py
core/: rag_service.py
domain/: models.py  settings.py
domain/entities/: chunk.py
domain/ports/: embedder_port.py  llm_port.py  scanner_port.py  vector_store_port.py
infrastructure/: dependencies.py  settings.py
ports/inbound/: ingest_port.py
ports/outbound/: embedder_port.py  scanner_port.py  vector_store_port.py
src/adapters/inbound/: streamlit_adapter.py
src/adapters/outbound/: bs4_scanner.py  chroma_store.py  faiss_store.py  groq_llm.py  ollama_embedder.py
src/application/services/: chat_service.py  ingest_service.py
src/domain/entities/: chunk.py  website.py
src/ports/inbound/: chat_port.py  ingest_port.py
src/ports/outbound/: llm_port.py  scanner_port.py  vector_store_port.py
