[project]
name = "chatbot-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.136.1",
    "groq>=0.37.1",
    "langchain>=1.2.17",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "streamlit>=1.57.0",
    "tiktoken>=0.12.0",
    "uvicorn>=0.46.0",
]
